added .gitignore file

--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,1 @@
-# Created by .ignore support plugin (hsz.mobi)
-
-apiVersion: v1
-kind: Pod
-metadata:
-  labels:
-    name: myapp
-  name: myapp-pod
-spec:
-  containers:
-    -
-      image: nginx
-      name: nginx-pod
+.vscode
